--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
 
     Kodo Kojo - API frontend which dispatch REST event to Http services or publish event on EvetnBus.
-    Copyright © 2016 Kodo Kojo (infos@kodokojo.io)
+    Copyright © 2017 Kodo Kojo (infos@kodokojo.io)
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -486,10 +486,10 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
-        <repository>
+        <!--repository>
             <id>nexus-kodokojo.kodokojo.io</id>
             <url>https://nexus-kodokojo.kodokojo.io</url>
-        </repository>
+        </repository -->
     </repositories>
     <distributionManagement>
         <repository>
@@ -510,7 +510,7 @@
             <url>http://www.gnu.org/licenses/gpl-3.0.en.html</url>
         </license>
     </licenses>
-    <inceptionYear>2016</inceptionYear>
+    <inceptionYear>2017</inceptionYear>
     <organization>
         <name>Kodo-kojo</name>
     </organization>
